Content and typos

--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
             </li>
             <li>Why is Switzerland have one of the highest accident rates in the world (top 20) but with the
                 <strong>lowest mortality</strong>
-                in the world ?</li>
+                in the world ?
+            </li>
         </ul>
         <p>
             Some French data are also included to provide context and help to understand a few numbers and also because
@@ -156,9 +157,11 @@
                 <h2>Roads distribution</h2>
                 <p>Road types can be tricky to define but it's still a good metric to observe.</p>
                 <p>The accident distribution in Vaud is special in the sense that the canton only has
-                    <strong>200km of motorway</strong> but the proportion of accidents on main roads/motorway is very concerning.
+                    <strong>200km of motorway</strong> but the proportion of accidents on main roads/motorway is very
+                    concerning.
                 </p>
-                <p>There is an obvious problem on the motorway, hosting this much accidents in such a small road must have an immense impact on traffic and maintenance.</p>
+                <p>There is an obvious problem on the motorway, hosting this much accidents in such a small road must
+                    have an immense impact on traffic and maintenance.</p>
             </div>
 
         </div>
@@ -336,7 +339,8 @@
                 <p>Car accident mortality is one of the most important data to observe when it comes to road safety and
                     for that matters, Switzerland has one the lowest in the world equated to the population with
                     <strong>only
-                        241 deaths in 2022</strong> (28 per million habitant).</p>
+                        241 deaths in 2022</strong> (28 per million habitant).
+                </p>
                 <p>Compared to France 48 death per million and Germany 37 death per million, Switzerland outshine
                     neighboors and rest of Europe on that regard.</p>
                 <p>Later we will see that the Valais is probably the safest canton to drive in Switzerland, it is also
@@ -347,10 +351,14 @@
             <div class="full-width-text-block">
                 <h2>Accident per 1000 population</h2>
                 <p>Here are the most concerning data, the number of accidents reported are very high compared to French
-                    numbers. It also to be noted that this is the only part of Switzerland more accident than its direct neighbor.</p>
-                <p>Most of canton with more than <strong>100 000 of population have way more than 2.0 accidents per 1000 people.</strong>
-                    Compared to France where more 95% of departement have less than 1.5 and <strong>80% have less than 1.0.</strong>
-                    It is fair to say that one is way more susceptible to encounter or be part of a car accident Romandy than in France.</p>
+                    numbers for the Romandy. It also to be noted that this is the only part of Switzerland more accident
+                    than its direct neighbor.</p>
+                <p>Most of canton with more than <strong>100 000 of population have way more than 2.0 accidents per 1000
+                        people.</strong>
+                    Compared to France where more 95% of departement have less than 1.5 and <strong>80% have less than
+                        1.0.</strong>
+                    It is fair to say that one is way more susceptible to encounter or be part of a car accident Romandy
+                    than in France.</p>
                 <p>Not only are they high but it should be taken into consideration that Switzerland is a very small
                     country so the impact on traffic of each accident is probably more potent. (Vaud roadways and Zurich
                     urban
@@ -399,12 +407,13 @@
 
     <div class="conclusion">
         <h1>Conclusion</h1>
-        <p>Switzerland really excels at road safety in a sense that <strong>mortality is fare much lower than in France, Germany
-            or Italy.</strong>
+        <p>Switzerland really excels at road safety in a sense that <strong>mortality is fare much lower than in France,
+                Germany
+                or Italy.</strong>
             However, the number of accidents per habitant seems very high compared to France for the Romandy and very
             low in Alemanni compared to Germany.</p>
-        <p>Is it too much of an assumption that Alemanni have excellent driver compared to their German neighbor ? And
-            Romandy have very poor drivers compared to their French neighboor ?</p>
+        <p>Is it too much of an assumption that Alemanni have excellent drivers compared to their German neighbor ? And
+            Romandy have very poor drivers compared to their French neighbor ?</p>
         <p>Is it a problem with road configurations ? Is the process to obtain a driving licence too easy ? Is it the
             amount of police / speed control on the road ? Is it the density of roads per area ? The amount of drivers ?
         </p>
@@ -443,8 +452,8 @@
             <p>It's about the place, not the people.</p>
         </details>
         <details>
-            <summary>Is it more fare to compare Romandy to France and German speaking Switzerland to Germany OR Romandy
-                to German speaking Switzerland ?</summary>
+            <summary>Is it more fare to compare Romandy to France and Alemmani to Germany OR Romandy
+                to Alemmani ?</summary>
             <p>Geograpical proximity is a very important factor and I have a very hard time to answer this question but
                 my guess is that Romandy should be compared to France and German speaking Switzerland to Germany</p>
         </details>
